# text-pipes

./: .envrc  .gitignore  .travis.yml  CHANGES.md  Fu.sh  LICENSE  README.md  changelog  flake.nix  hie.yaml  pipes-text.cabal  shell.nix  stack.yaml  text-pipes.cabal
.github/workflows/: analysis.yml  release.yml  tests.yml
Data/Text/: Pipes.hs
Data/Text/Pipes/: Parse.hs
Pipes/: Text.hs
Pipes/Prelude/: Text.hs
Pipes/Text/: Codec.hs  Encoding.hs  IO.hs  Internal.hs  Parse.hs  Tutorial.hs
Pipes/Text/Internal/: Codec.hs  Decoding.hs
bench/: IO.hs
cbits/: cbits.c
examples/: attoparser.hs  decode.hs  lines_url.hs  zoom.hs
include/: pipes_text_cbits.h
nix/: sources.json
test/: Test.hs  Utils.hs
