name:                pipes-text
version:             0.1.0.0
synopsis:            Text pipes.
description:         Most of the pipes and other operations defined in `pipes-text` 
                     closely mirrors the `pipes-bytestring` library, simply adjusting for
                     the difference between strict `ByteString` and strict `Text`, and between
                     `Word8` and `Char`. To this core are added some simple functions 
                     some akin to the `String` operations in `Pipes.Prelude`, some like the
                     utilities in `Data.Text`.  
                     
                     All of the `IO` operations defined here - e.g `readFile`, `stdout` etc. 
                     - are conveniences akin to those in `Data.Text.IO` which e.g. try to 
                     find the system encoding and use the exceptions defined in the `text`
                     library. Proper `IO` in the sense of this library will employ 
                     `pipes-bytestring` in conjuntion with 'pure' operations like 
                     `decodeUtf8` and `encodeUtf8` that are defined here. 

homepage:            github.com/michaelt/text-pipes
license:             BSD3
license-file:        LICENSE
author:              Michael Thompson
maintainer:          what_is_it_to_do_anything@yahoo.com
category:            Text, Pipes
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: README.md
                    include/*.h 

library
  c-sources:    cbits/cbits.c
  include-dirs: include
  exposed-modules:     Pipes.Text, Pipes.Text.Internal.Decoding, Pipes.Text.Internal.Codec
  -- other-modules:       
  other-extensions:    RankNTypes
  build-depends:       base         >= 4       && < 5  ,
                       bytestring >=0.10       && < 0.11,
                       text >=0.11             && < 0.12,
                       profunctors  >= 3.1.1   && < 4.1 ,
                       pipes >=4.0             && < 4.2,
                       pipes-group  >= 1.0.0   && < 1.1 ,
                       pipes-parse >=2.0       && < 3.1,
                       pipes-safe, 
                       pipes-bytestring >= 1.0 && < 2.1,
                       transformers >= 0.2.0.0 && < 0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -O2 
