name:                pipes-text
version:             0.0.0.7
synopsis:            Text pipes.
description:         Many of the pipes and other operations defined here mirror those in
                     the `pipes-bytestring` library. Folds like `length` and grouping 
                     operations like `lines` simply  adjust for the differences between 
                     `ByteString` and `Text` and `Word8` and `Char`. It is hoped that this
                     homogeneity will aid in learning the terms and programming style associated
                     with both of them.  
                     .
                     The most distinctive addition of the library to that core is the 
                     apparatus for encoding and decoding `Text` and `ByteString`.
                     .
                     Also defined are some simple functions akin to the `String` 
                     operations in `Pipes.Prelude`, and others like the utilities in `Data.Text`.  
                     .
                     All of the `IO` operations defined here - e.g `readFile`, `stdout` etc. 
                     - are conveniences akin to those in `Data.Text.IO` which e.g. try to 
                     find the system encoding and use the exceptions defined in the `text`
                     library. Proper `IO` in the sense of this library will employ 
                     `pipes-bytestring` in conjuntion with 'pure' operations like 
                     `decodeUtf8` and `encodeUtf8` that are defined here. 

homepage:            https://github.com/michaelt/text-pipes
bug-reports:         https://github.com/michaelt/text-pipes/issues
license:             BSD3
license-file:        LICENSE
author:              Michael Thompson
maintainer:          what_is_it_to_do_anything@yahoo.com
category:            Text, Pipes
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md include/*.h changelog
source-repository head
    type: git
    location: https://github.com/michaelt/text-pipes

flag noio
  default: False
  Description: Use a version of text earlier than 0.11.3

library
  exposed-modules:     Pipes.Text, Pipes.Text.Encoding
  build-depends:       base >= 4                  && < 5  ,
                       bytestring >= 0.9                  ,
                       text >=0.11.3              && < 1.2,
                       text-stream-decode >= 0.1  && < 0.2,  
                       profunctors  >= 3.1.1      && < 4.1,
                       pipes >=4.0                && < 4.2,
                       pipes-group  >= 1.0.0      && < 1.1,
                       pipes-parse >=2.0          && < 3.1,
                       pipes-safe, 
                       pipes-bytestring >= 1.0    && < 2.1,
                       transformers >= 0.2.0.0    && < 0.4
  other-extensions:    RankNTypes
  default-language:    Haskell2010
  ghc-options: -O2

  if !flag(noio)
    exposed-modules:   Pipes.Text.IO
    build-depends:     text >=0.11.3              && < 1.2

