name:               pipes-text
version:            1.0.0.0
synopsis:           properly streaming text
description:
  The organization of this package follows the rule:
  .
  * @pipes-text : pipes-bytestring :: text : bytestring@
  .
  Familiarity with the other three packages should give one an idea
  what to expect where. The package has three principal modules,
  @Pipes.Text@ , @Pipes.Text.Encoding@ and @Pipes.Text.IO@; the
  division has more or less the significance it has in the @text@
  library.
  .
  The module @Pipes.Text.IO@ is present as a convenience.  Official
  pipes IO uses @Pipes.ByteString@ together with the bytestring
  decoding functions in @Pipes.Text.Encoding@.  In particular, the
  @Pipes.Text.IO@ functions use Text exceptions, while @Pipes.Text@
  uses the standard pipes practice of breaking with a failed
  parse. Thus, for example, the type of @decodeUtf8@ is
  .
  * @decodeUtf8 :: Monad m => Producer ByteString m r -> Producer Text m (Producer ByteString m r)@
  .
  where any unparsed bytes are returned.
  .
  @Pipes.Text.IO@ and @Pipes.Prelude.Text@ use version 0.11.3 or later
  of the @text@ library; older versions of @text@ can be used with the
  flag @-fnoio@

homepage:           https://github.com/pjones/text-pipes
bug-reports:        https://github.com/pjones/text-pipes/issues
license:            BSD3
license-file:       LICENSE
author:             Michael Thompson
maintainer:         Peter Jones <pjones@devalot.com>
category:           Text, Pipes
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  README.md
  changelog

source-repository head
  type:     git
  location: https://github.com/pjones/text-pipes

flag noio
  default:     False
  description: Use a version of text earlier than 0.11.3

library
  exposed-modules:
    Pipes.Text
    Pipes.Text.Encoding

  build-depends:
      base               >=4       && <5
    , bytestring         >=0.9.2.1 && <0.11
    , pipes              >=4.0     && <4.4
    , pipes-bytestring   >=1.0     && <2.2
    , pipes-group        >=1.0.0   && <1.1
    , pipes-parse        >=3.0.0   && <3.1
    , pipes-safe         >=2.1     && <2.4
    , streaming-commons  >=0.1     && <0.3
    , text               >=0.11.2  && <1.3
    , transformers       >=0.2.0.0 && <0.6

  other-extensions: RankNTypes
  default-language: Haskell2010

  if !flag(noio)
    exposed-modules:
      Pipes.Prelude.Text
      Pipes.Text.IO
      Pipes.Text.Tutorial

    build-depends:   text >=0.11.3 && <1.3
