name:                text-pipes
version:             0.1.0.0
synopsis:            Text pipes.
description:         Text pipes.
homepage:            github.com/michaelt/text-pipes
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Text.Pipes
  -- other-modules:       
  other-extensions:    RankNTypes
  build-depends:       base         >= 4       && < 5  ,
                       transformers >= 0.2.0.0 && < 0.4,
                       pipes >=4.0             && < 4.2,
                       pipes-parse >=2.0       && < 2.1,
                       pipes-safe, 
                       pipes-bytestring >= 1.0 && < 1.1,
                       transformers >= 0.3     && < 0.4,
                       text >=0.11             && < 0.12,
                       bytestring >=0.10       && < 0.11
  -- hs-source-dirs:      
  default-language:    Haskell2010